# layer-lenses-testbed

./: --stderr  .cursorignore  .gitignore  AGENTS.md  README.md  README_detailed.md  math-demo.md  pyproject.toml
notebooks/: DLGN_multiseed_multipath_runner.ipynb  ReLU_runner.ipynb  legacy_dlgn_minimal.ipynb  multiseed_multipath_runner.ipynb  scratch.ipynb
notebooks/old_notebooks/discontinuities_clustering/: DLGN_ODT_discontinuities.tex
notebooks/old_notebooks/layers_as_lenses/: Layers_as_Lenses.tex
notebooks/old_notebooks/layers_as_lenses/code/: multi_path_dlgn.ipynb  multi_path_dlgn_minimal.ipynb  readme.md  relu_runs.ipynb  single_path_dlgn.ipynb  svm_runs.ipynb
notes/: layers_as_lenses_learning_guide.md  paper_mismatches.md  reproducibility_log.md  research_spec.md  research_spec_math.ipynb  session_log.md
src/first_experiment/: __init__.py  analysis.py  dlgn.py  experiment_config.py  experiment_runner.py  io.py  multiseed.py  odt.py  parity_debug.py  relu_analysis.py  relu_training.py  training.py
src/layer_lenses/: analysis.py  dlgn.py  experiment_config.py  experiment_runner.py  io.py  multiseed.py  odt.py  relu_analysis.py  relu_mlp.py  relu_training.py  training.py  utilities.py
tests/: test_dlgn_training.py  test_experiment_runner.py  test_multiseed_analysis.py  test_odt.py  test_relu_analysis.py  test_relu_mlp.py  test_relu_training.py  test_rename_compat.py  test_utilities.py
