[project]
name = "first-experiment"
version = "0.1.0"
description = "Clean reimplementation of DLGN / COB-ODT research (Paper 1: Discontinuities; Paper 2: Layers as Lenses)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "torchvision",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "pandas>=3.0.2",
    "tqdm>=4.67.3",
    "ipywidgets>=8.1.8",
    "ipympl>=0.10.0",
]

[project.scripts]
first-experiment = "first_experiment.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
